fix: resolve button flickering issue on page refresh

--- a/styles/hamburgerPop.scss
+++ b/styles/hamburgerPop.scss
@@ -1,21 +1,28 @@
-.sqa-btn {
-  background-color: rgba(0, 0, 0, 0.5);
-  width: 78px;
-  height: 78px;
+.sqa-wrapper {
   position: fixed;
+  z-index: 1000;
   right: 0;
   top: 45%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  z-index: 1000;
+  width: 78px;
+  height: 78px;
+  display: none;
 
-  img {
-    width: 32px;
-    height: 32px;
+  .sqa-btn {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.5);
+
+    img {
+      width: 32px;
+      height: 32px;
+    }
   }
 }
+
 
 .hamburgerPop {
   transition: opacity 0.5s ease, visibility 0.5s ease;
